# docs.mhmd.io

./: README.md  mkdocs.yml  netlify.toml  pyproject.toml
docs/: about.md  index.md
docs/OSSF/: OSSF.md
docs/aws/: aws-config-file.md  aws-multi-account.md  aws-vault.md  codecommit-sso.md  devsecops.md  ecs-blue-green.md
docs/books/: devops.md
docs/container_registries/: harbor.md
docs/contributions/: diagrams.md
docs/devops/: tools.md
docs/devops/iacmk/: iacmk.md
docs/diagrams/: aws_multi_accounts.diagrams.py  terraform_bootstrap.diagrams.py
docs/help/: Material_MkDocs.md  mkdocs.md
docs/macos/brew/: utils.md
docs/makefile/: terraform.md
docs/terraform/: best_practices.md  cicd.md  links.md  terraform-backend.md  terraform-organization.md
